Name:                fileformat
Version:             0.0.0
Description:         Get the fileformat of files
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            get the fileformat of files
Category:            Data
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/hs-fileformat
Cabal-Version:       >=1.8

Flag test
  Description:       Build unit test
  Default:           True

Library
  Build-Depends:     base >= 4 && < 5
                   , bytestring
  Exposed-modules:   Data.FileFormat
  ghc-options:       -Wall

Executable           fileformat-get
  Main-Is:           Tests.hs
  hs-source-dirs:    src/
  if flag(test)
    Buildable:       True
    Build-depends:   base >= 4 && < 5
                   , bytestring
                   , fileformat
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-fileformat
